# luxor9-video-pipeline

./: .dockerignore  .gitignore  AGENTS.md  AGENT_GUIDE.md  Dockerfile  MASTER_PLAN.md  Makefile  PROJECT_CONTEXT.md  README.md  ULTRA_PLAN_CAMPAIGN.md  demo_explainer.py  opencode.json  railway.toml  requirements.txt  setup_script.py  start.bat  zero_cost_demo.py
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md
LUXOR9-Unified/backend/: .env.example  2026-03-07-103918-implement-the-following-plan.txt  main.py  pyproject.toml  requirements.txt
LUXOR9-Unified/backend/alembic/: env.py
LUXOR9-Unified/backend/alembic/versions/: 001_initial_schema.py
LUXOR9-Unified/backend/app/: api.py  ceo_memory.py  config.py  database.py  main.py  models.py  orchestrator.py
LUXOR9-Unified/backend/app/agents/: __init__.py  base_agent.py  ceo_agent.py  csuite.py  factory.py  free_video_worker_agent.py  llm_engine.py  manager_agent.py  prime.py  video_worker_agent.py  vp_agent.py  worker_agent.py
LUXOR9-Unified/backend/app/agents/tools/: __init__.py  ceo_tools.py  system_tools.py
LUXOR9-Unified/backend/app/api/: __init__.py  ceo_routes.py  routes.py
LUXOR9-Unified/backend/app/database/: models.py
LUXOR9_AGENTS/: package-lock.json
_root-files/: App.tsx  Luxoranova × Luxor9 — Complete Impl.txt  luxor9-campaign.jsx  luxor9v4  metadata.json  package.json  sw.js
colab/: LUXOR9_AI_Engine.ipynb
deploy/: README.md  deploy-free.sh
luxor9-agentic-ai/: App.tsx  README.md  docker-compose.yml  index.html  package-lock.json  package.json
luxor9-final/: AGENTS.md  (+5 more)
(+159 files in other folders)
