[tool.poetry]
name = "luxor9-backend"
version = "0.1.0"
description = "LUXOR9 Hierarchical Agentic AI Orchestration System"
authors = ["LUXOR9"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
redis = "^5.0.1"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
python-multipart = "^0.0.6"
openai = "^1.10.0"
anthropic = "^0.18.0"
groq = "^0.4.2"
httpx = "^0.26.0"
celery = "^5.3.6"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3
